# pokemon-za

./: README.md  lists.html  pokemon.html  pyproject.toml  schema.md  waza.html  za.bak.sqlite3
.cursor/rules/: pokemon.mdc
src/: app.py  code_environment.py  db.py  prompt.txt  scrape_za.py  tools.py
