[project]
name = "pokemon-za"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cloudscraper>=1.2.71",
    "fastapi>=0.121.2",
    "fastapi-mcp>=0.4.0",
    "lxml>=6.0.2",
    "playwright>=1.56.0",
    "pydantic>=2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
]
